k8s/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: peihsinsu/demo:v20191130.01
        ports:
        - containerPort: 80
