k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo
spec:
  selector:
    app: demo
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80
  type: LoadBalancer
